--- a/app/public/index.html
+++ b/app/public/index.html
@@ -3,12 +3,36 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png">
     <title>Heygidi</title>
 
+    <meta name="description" content="Heygidi, Hurriyet API kullanılarak 1997'den 2017'ye kadar Gündem kategorisindeki haberlerin başlıklarında en çok kullanılan kelimeleri görselleştiren bir istatistik çalışmasıdır.">
+    <meta property="og:description" content="Heygidi, Hurriyet API kullanılarak 1997'den 2017'ye kadar Gündem kategorisindeki haberlerin başlıklarında en çok kullanılan kelimeleri görselleştiren bir istatistik çalışmasıdır.">
+    <meta property="og:title" content="Heygidi">
+    <meta property="og:image" content="https://alpcanaydin.github.io/heygidi/social.jpg">
+    <meta property="og:url" content="https://alpcanaydin.github.io/heygidi">
+    <meta property="og:site_name" content="Heygidi">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:url" content="https://alpcanaydin.github.io/heygidi">
+    <meta name="twitter:title" content="Heygidi">
+    <meta property="twitter:image" content="https://alpcanaydin.github.io/heygidi/social.jpg">
+    <meta name="twitter:description" content="Heygidi, Hurriyet API kullanılarak 1997'den 2017'ye kadar Gündem kategorisindeki haberlerin başlıklarında en çok kullanılan kelimeleri görselleştiren bir istatistik çalışmasıdır.">
+
     <link href="https://fonts.googleapis.com/css?family=Roboto|Merriweather:400,700&amp;subset=latin-ext" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/balloon-css/0.2.4/balloon.min.css">
   </head>
   <body>
     <div id="root"></div>
+
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-83631054-3', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
